changed weight to min-weight in all sections, to fix overflowing issues

--- a/odinCurriculum/styles.css
+++ b/odinCurriculum/styles.css
@@ -34,7 +34,7 @@ ul {
 .section-one {
     background-color: #1F2937;
     color: #F9FAF8;
-    height: 60vh;
+    min-height: 60vh;
     display: flex;
     justify-content: center;
 }
@@ -82,7 +82,7 @@ ul {
 /* section two */
 
 .section-two{
-    height: 50vh;
+    min-height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -101,7 +101,7 @@ ul {
     padding: 40px;
 }
 .card{
-    width:200px
+    width:200px;
 }
 .card p{
     text-align: center;
@@ -117,7 +117,7 @@ ul {
 
 .section-three{
     background-color: #E5E7EB;
-    height: 40vh;
+    min-height: 40vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -141,7 +141,7 @@ ul {
 /* section four */
 
 .section-four{
-    height: 30vh;
+    min-height: 30vh;
     display: flex;
     justify-content: center;
     align-items: center;
